# navi-nav

./: README.md  colcon.pkg
src/navi_robot_behaviors/: .gitignore  package.xml  setup.cfg  setup.py
src/navi_robot_behaviors/navi_robot_behaviors/: deteccion_apriltags.py
src/navi_robot_localization/: CMakeLists.txt  CMakeLists.txt.txt  package.xml  package.xml.txt
src/navi_robot_localization/config/: odom.yaml
src/navi_robot_localization/launch/: launch_slam.py  map_encoders.py
src/navibot_interfaces/: CMakeLists.txt  package.xml
src/navibot_interfaces/msg/: EncoderStatus.msg  ImuStatus.msg  PwmChannel.msg  VelocityOmni.msg
src/navibot_interfaces/msg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/navibot_interfaces/msg/log/: latest_build
stm32/navibot_workspace_0.0.0/navibot_v.0/: navibot_v.0.ioc
stm32/navibot_workspace_0.0.0/navibot_v.0/APP/: app_protocol.c  app_protocol.h  config.h
stm32/navibot_workspace_0.0.0/navibot_v.0/BSP/: bsp.c  bsp.h  bsp_encoder.c  bsp_encoder.h  bsp_icm20948.c  bsp_icm20948.h  bsp_motor.c  bsp_motor.h  bsp_usart.c  bsp_usart.h
stm32/navibot_workspace_0.0.0/navibot_v.0/Core/Inc/: main.h
stm32/navibot_workspace_0.0.0/navibot_v.0/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
